error/src/main/java/com/example/error/exception/NotFoundException.kt
package com.example.error.exception

class NotFoundException(e: Throwable) : RuntimeException(e)